2022-02-06  7.1.0-24  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-24 GIT revision 19...

2021-02-06  7.1.0-24  <quetzlzacatenango@image...>
  * optimize reading of XPM properties.

2022-02-05  7.1.0-23  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-23 GIT revision 19647:706986228:20220205

2021-02-02  7.1.0-23  <quetzlzacatenango@image...>
  * limit recursion when reading the VID image format.
  * improperly resizing memory due to errant check (reference
    https://github.com/ImageMagick/ImageMagick/issues/4807).

2022-01-29  7.1.0-22  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-22 GIT revision 19618:cb0ac9022:20220129

2021-01-29  7.1.0-22  <quetzlzacatenango@image...>
  * limit colorname length to avoid possible DoS
  * restore MPRI URI in SVG

2022-01-28  7.1.0-21  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-21 GIT revision 19609:f084a86ec:20220128

2021-01-24  7.1.0-21  <quetzlzacatenango@image...>
  * PDF now shows the correct Unicode title (reference
  https://github.com/ImageMagick/ImageMagick/issues/4771).
  * optimize Fx image statistics (reference
    https://github.com/ImageMagick/ImageMagick/discussions/4533).

2022-01-21  7.1.0-20  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-20 GIT revision 19585:2cd840776:20220121 

2022-01-09  7.1.0-20  Dirk Lemstra <dirk@lem.....org>
  * Added support for ARM64 to the Visual Studio build on Windows.
  * Removed ImageMagickObject from the Windows installer.

2021-01-01  7.1.0-20  <quetzlzacatenango@image...>
  * Support seamless blending of a foreground and background image.
  * Support saliency blending of a foreground and background image.
  * Support QOI image format.
  * Perist frame delay when converting APNG to Webp (reference
    https://github.com/ImageMagick/ImageMagick/issues/4704).
  * -fx performance increase by one or two orders of magnitude (reference